--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ env:
  - RACKET_VERSION=5.3.2
  - RACKET_VERSION=5.3.5
  - RACKET_VERSION=5.3.6
+ - RACKET_VERSION=5.92
  - RACKET_VERSION=HEAD
 
 before_install:
