Simplify .travis.yml
Put /usr/racket/bin in PATH and use makefile.

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,25 @@
 language: c
 
 env:
- - RACKET_VERSION=5.3.2
- - RACKET_VERSION=5.3.5
- - RACKET_VERSION=5.3.6
- - RACKET_VERSION=6.0
- - RACKET_VERSION=6.0.1
- - RACKET_VERSION=HEAD
+    - RACKET_VERSION=5.3.2
+    - RACKET_VERSION=5.3.5
+    - RACKET_VERSION=5.3.6
+    - RACKET_VERSION=6.0
+    - RACKET_VERSION=6.0.1
+    - RACKET_VERSION=HEAD
 
 before_install:
-- git clone https://github.com/greghendershott/travis-racket.git
-- cat travis-racket/install-racket.sh | bash # pipe to bash not sh!
+    - git clone https://github.com/greghendershott/travis-racket.git
+    - cat travis-racket/install-racket.sh | bash # pipe to bash not sh!
+    - export PATH=/usr/racket/bin:$PATH
 
 install:
 
 before_script:
 
 script:
- - /usr/racket/bin/raco link rackjure
- - cd rackjure
- - /usr/racket/bin/raco make main.rkt
- - /usr/racket/bin/raco test -x .
+    - make link
+    - make setup
+    - make test
 
 after_script:
