Actually revert to using `raco` directly for everything.
Some of the options used in makefile don't work with older versions of
Racket. The makefile is really intended for use developing on newer
versions of Racket.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_script:
 
 script:
     - raco link rackjure
-    - make setup
-    - make test
+    - cd rackjure
+    - raco make main.rkt
+    - raco test -x .
 
 after_script:
