--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,8 @@ env:
     - RACKET_VERSION=5.3.6
     - RACKET_VERSION=6.0
     - RACKET_VERSION=6.0.1
+    - RACKET_VERSION=6.1
+    - RACKET_VERSION=6.1.1
     - RACKET_VERSION=HEAD
 
 before_install:
