--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,26 @@
 language: c
 
+# Optional: To use Travis CI's newer container infrastucture,
+# un-comment the following line. (Also be sure RACKET_DIR is set to
+# somewhere like ~/racket that doesn't require sudo.)
+#
+sudo: false
+
 env:
+  global:
+    # Supply a global RACKET_DIR environment variable. This is where
+    # Racket will be installed. A good idea is to use ~/racket because
+    # that doesn't require sudo to install and is therefore compatible
+    # with Travis CI's newer container infrastructure.
+    - RACKET_DIR=~/racket
+  matrix:
+    # Supply at least one RACKET_VERSION environment variable. This is
+    # used by the install-racket.sh script (run at before_install,
+    # below) to select the version of Racket to download and install.
+    #
+    # Supply more than one RACKET_VERSION (as in the example below) to
+    # create a Travis-CI build matrix to test against multiple Racket
+    # versions.
     - RACKET_VERSION=5.3.2
     - RACKET_VERSION=5.3.5
     - RACKET_VERSION=5.3.6
@@ -11,18 +31,21 @@ env:
     - RACKET_VERSION=HEAD
 
 before_install:
-    - git clone https://github.com/greghendershott/travis-racket.git
-    - cat travis-racket/install-racket.sh | bash # pipe to bash not sh!
-    - export PATH=/usr/racket/bin:$PATH
+  - git clone https://github.com/greghendershott/travis-racket.git
+  - cd travis-racket                           # TESTING
+  - git checkout travis-container-squash       # TESTING
+  - cd ..                                      # TESTING
+  - cat travis-racket/install-racket.sh | bash # pipe to bash not sh!
+  - export PATH="${RACKET_DIR}/bin:${PATH}" #install-racket.sh can't set for us
 
 install:
 
 before_script:
 
 script:
-    - raco link rackjure
-    - cd rackjure
-    - raco make main.rkt
-    - raco test -x .
+  - raco link rackjure
+  - cd rackjure
+  - raco make main.rkt
+  - raco test -x .
 
 after_script:
