--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,18 @@ env:
     - RACKET_VERSION=6.1
     - RACKET_VERSION=6.1.1
     - RACKET_VERSION=HEAD
+    - RACKET_VERSION=SCOPE_SNAPSHOT
+
+# You may want to test against certain versions of Racket, without
+# having them count against the overall success/failure.
+matrix:
+  allow_failures:
+    - env: RACKET_VERSION=HEAD
+    - env: RACKET_VERSION=SCOPE_SNAPSHOT
+  # Fast finish: Overall build result is determined as soon as any of
+  # its rows have failed, or, all of its rows that aren't allowed to
+  # fail have succeeded.
+  fast_finish: true
 
 before_install:
   - git clone https://github.com/greghendershott/travis-racket.git
