--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,7 @@ env:
     - RACKET_VERSION=6.0.1
     - RACKET_VERSION=6.1
     - RACKET_VERSION=6.1.1
+    - RACKET_VERSION=6.2
     - RACKET_VERSION=HEAD
     - RACKET_VERSION=SCOPE_SNAPSHOT
 
