--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,7 @@ env:
     - RACKET_VERSION=7.1
     - RACKET_VERSION=7.2
     - RACKET_VERSION=7.3
+    - RACKET_VERSION=7.4
     - RACKET_VERSION=HEAD
 
 # You may want to test against certain versions of Racket, without
